<resources>
    <string name="app_name">IMDB Movies View</string>
    <string name="menu_popular">Movies Most Playing</string>
    <string name="menu_rate">Movies High Rate</string>
    <string name="menu_upcoming">Movies Up Coming</string>
    <string name="menu_nowplay">Movies Now Playing</string>
    <string name="menu_about">About Us</string>
    <string name="sync">Sync Data..</string>
    <string name="synopsis">Synopsis</string>
    <string name="rating">Rating</string>
    <string name="released">Released</string>
    <string name="favorite">Favorite</string>
    <string name="unfavorite">Unfavorite</string>
</resources>
