<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:title="@string/menu_rate"
        android:id="@+id/rate_movies"
        android:orderInCategory="1"
        app:showAsAction="never"/>
    <item
        android:title="@string/menu_popular"
        android:id="@+id/popular_movies"
        android:orderInCategory="1"
        app:showAsAction="never"/>
    <item
        android:title="@string/menu_nowplay"
        android:id="@+id/nowplay_movies"
        android:orderInCategory="1"
        app:showAsAction="never"/>
    <item
        android:title="@string/menu_upcoming"
        android:id="@+id/upcom_movies"
        android:orderInCategory="1"
        app:showAsAction="never"/>




</menu>