<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_background"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_background"
                android:layout_margin="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text=""
                android:textAllCaps="true"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="#263238"
                android:textStyle="bold" />

            <android.support.v7.widget.CardView
                android:id="@+id/card_post"
                android:layout_width="150dp"
                android:layout_height="208dp"
                android:layout_below="@+id/tv_title"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp">

                <ImageView
                    android:id="@+id/image_post"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <android.support.v7.widget.CardView
                    android:id="@+id/tv_custom"
                    android:layout_width="20dp"
                    android:layout_height="25dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_centerVertical="true"
                    android:visibility="invisible"
                    app:cardBackgroundColor="@android:color/holo_green_light">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="+1"
                        android:layout_gravity="center_vertical"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textColor="#D7DDE0"
                        android:textStyle="bold" />

                </android.support.v7.widget.CardView>

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_title"
                android:layout_toRightOf="@id/card_post"
                android:layout_toEndOf="@id/card_post"
                android:orientation="vertical"
                android:paddingRight="8dp">

                <TextView
                    android:id="@+id/tv_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/rating"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="?attr/colorAccent"
                    android:textStyle="bold" />

                <include layout="@layout/view_rating"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/released"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="?attr/colorAccent"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_released_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text=""
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorMaterialB" />

                <android.support.v7.widget.CardView
                    android:id="@+id/cd_favo"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="24dp"
                    app:cardBackgroundColor="@color/colorAccent"
                    app:cardCornerRadius="12dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/ic_favorite"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="8dp"
                            android:src="@drawable/ic_star_border" />

                        <TextView
                            android:id="@+id/tv_pavo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="8dp"
                            android:layout_toEndOf="@id/ic_favorite"
                            android:layout_toRightOf="@+id/ic_favorite"
                            android:text="@string/favorite"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:textColor="@color/colorGrayB" />
                    </RelativeLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <View
                android:id="@+id/line_view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/card_post"
                android:layout_margin="8dp"
                android:background="@color/colorAccent" />

            <TextView
                android:id="@+id/synop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line_view"
                android:layout_marginLeft="8dp"
                android:text="@string/synopsis"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/synop"
                android:layout_margin="8dp"
                android:text=""
                android:textAppearance="?android:textAppearanceMedium" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>